--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.1.3",
+    "flatpickr": "^4.6.9",
     "mapbox-gl": "^2.7.0",
     "stimulus": "^3.0.1",
+    "stimulus-flatpickr": "^1.4.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
